src/objects/Hotel_Theme__c.object
<CustomObject>
    <description>Object created to store hotel theme data</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Hotel_Themes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Hotel Themes</relationshipLabel>
        <relationshipName>Hotel_Themes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Theme_Notes__c</fullName>
        <inlineHelpText>Comments can be up to 255 characters.</inlineHelpText>
        <label>Theme Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Theme_Status__c</fullName>
        <label>Theme Status</label>
        <picklist>
            <picklistValues>
                <fullName>Hotel meets criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel does not meet criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed theme at hotel&apos;s request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <label>Theme</label>
        <referenceTo>Theme__c</referenceTo>
        <relationshipLabel>Hotel Themes</relationshipLabel>
        <relationshipName>Hotel_Theme_Reviews</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Hotel Theme</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Theme__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HT-{0000}</displayFormat>
        <label>Hotel Theme</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotel Themes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>